Added menu, map activity set up, product activity and map activity accesible from menu on home page

--- a/PharmacyMap/app/src/main/res/layout/home_page_fragment_main.xml
+++ b/PharmacyMap/app/src/main/res/layout/home_page_fragment_main.xml
@@ -13,15 +13,18 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/searchMap"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_above="@+id/executeQuery"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="58dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Locate Store"
         android:id="@+id/executeQuery"
-        android:layout_below="@+id/searchMap"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="42dp" />
+        android:layout_marginBottom="182dp" />
+
 </RelativeLayout>
