--- a/PharmacyMap/app/src/main/res/layout/home_page_fragment_main.xml
+++ b/PharmacyMap/app/src/main/res/layout/home_page_fragment_main.xml
@@ -12,6 +12,8 @@
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
         android:id="@+id/searchMap"
         android:layout_above="@+id/executeQuery"
         android:layout_alignParentRight="true"
