--- a/PharmacyMap/app/src/main/res/layout/home_page_fragment_main.xml
+++ b/PharmacyMap/app/src/main/res/layout/home_page_fragment_main.xml
@@ -12,10 +12,8 @@
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
         android:id="@+id/searchMap"
-        android:layout_above="@+id/executeQuery"
+        android:layout_above="@+id/button"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="58dp" />
@@ -24,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Locate Store"
-        android:id="@+id/executeQuery"
+        android:id="@+id/button"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="182dp" />
