took map code and execute it on button click, added test apk

--- a/PharmacyMap/app/src/main/res/layout/home_page_fragment_main.xml
+++ b/PharmacyMap/app/src/main/res/layout/home_page_fragment_main.xml
@@ -13,6 +13,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/searchMap"
+        android:inputType="number"
+        android:ems="10"
         android:layout_above="@+id/button"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
