--- a/PharmacyMap/app/src/main/res/layout/fragment_products.xml
+++ b/PharmacyMap/app/src/main/res/layout/fragment_products.xml
@@ -15,34 +15,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:src="@drawable/benadryl"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/benadryl" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView2"
-        android:layout_marginTop="43dp"
-        android:src="@drawable/claritin"
-        android:layout_below="@+id/imageView"
-        android:layout_centerHorizontal="true" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView3"
-        android:layout_below="@+id/imageView2"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="41dp"
-        android:src="@drawable/benadrylsyrup"/>
+        android:src="@drawable/benadrylfacts" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView4"
-        android:layout_below="@+id/imageView3"
-        android:layout_alignStart="@+id/imageView3"
-        android:src="@drawable/zyrtec"/>
 
 </RelativeLayout>
